# ljmd

./: .gitignore  CMakeLists-working.txt  CMakeLists.txt  README.md  cbuild.sh
MPI_only/: 01n_MPI_alt.e9148194  01n_MPI_alt.o9148194  02n_MPI_alt.o9148195  03n_MPI_alt.o9148196  04n_MPI_alt.o9148197  06n_MPI_alt.o9148198  08n_MPI_alt.e9148199  08n_MPI_alt.o9148199  0compile_hyb_ljmd.e9148174  0compile_hyb_ljmd.o9148174  0compile_hyb_ljmd.o9148193  send_job_n1.sh  send_job_n2.sh  send_job_n3.sh  send_job_n4.sh  send_job_n6.sh  send_job_n8.sh
MPI_only/examples/: CMakeLists.txt
MPI_only/old_jobs/: 2n_MPI_old.o9148146  4n_MPI_old.o9148154  MPI_ljmd.o9141245  MPI_ljmd_Newt.o9141247  send_job.sh
MPI_only/src/: forces_mpi.c
MPI_only_balanced/: 01n_MPI_bal.o9148187  02n_MPI_bal.o9148188  03n_MPI_bal.o9148189  04n_MPI_bal.o9148190  06n_MPI_bal.o9148191  08n_MPI_bal.o9148192  0compile_hyb_ljmd.e9148180  0compile_hyb_ljmd.e9148186  0compile_hyb_ljmd.o9148180  0compile_hyb_ljmd.o9148186  CMakeLists.txt  depend.sh  send_job_compile.sh  send_job_n1.sh  send_job_n2.sh  send_job_n3.sh  send_job_n4.sh  send_job_n6.sh  send_job_n8.sh
MPI_only_balanced/include/: mdlib-mpi.h
MPI_only_balanced/old_jobs/: 2n_MPI_balanced.o9148147  4n_MPI_balanced.o9148153  send_job.sh
MPI_only_balanced/src/: forces_mpi.c  ljmd-mpi.c
cells_ljmd/cells_Hybrid/include/: mdlib.h
cells_ljmd/cells_Hybrid/src/: forces.c  ljmd.c
cells_ljmd/cells_MPI/: CMakeLists.txt  cbuild.sh
cells_ljmd/cells_MPI/include/: mdlib.h
cells_ljmd/cells_MPI/src/: forces.c  ljmd.c  verlet_ti.c
cells_ljmd/cells_Vanilla/: CMakeLists.txt  cbuild.sh
cells_ljmd/cells_Vanilla/include/: mdlib.h
cells_ljmd/cells_Vanilla/src/: cells_utilities.c  ljmd.c  verlet_ti.c
cells_ljmd/cells_Vanilla_v1/src/: cells_utilities.c  forces.c  ljmd.c
cells_ljmd/old_cells_Hybrid/: CMakeLists.txt  cbuild.sh
cells_ljmd/old_cells_Hybrid/include/: mdlib.h
cells_ljmd/old_cells_Hybrid/src/: energies.c  forces.c  ljmd.c  utilities.c  verlet_ti.c
include/: mdlib.h
reports/: Extra Tasks Report.md  Individual Task Report.md
src/: forces-mpi.c  forces_mpi.c  ljmd-mpi.c  ljmd-serial.c  ljmd_mpi.c  reading.c  verlet_ti.c
